[gd_scene load_steps=10 format=3 uid="uid://bcum4ad4774th"]

[ext_resource type="Script" path="res://scripts/game_over_screen.gd" id="1_ktyi7"]
[ext_resource type="Texture2D" uid="uid://dgqnqa2lqpey5" path="res://sprites/particles/Particle-Star.png" id="2_niorh"]
[ext_resource type="Texture2D" uid="uid://dt1s76sfx8xdy" path="res://sprites/particles/Particle-X.png" id="3_uhjxs"]
[ext_resource type="Texture2D" uid="uid://dsvkqvwjmeipw" path="res://sprites/particles/Particle-Dot.png" id="4_s7i67"]

[sub_resource type="Curve" id="Curve_qivs3"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.108939, 0.867221), 0.0, 0.0, 0, 0, Vector2(0.248603, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="Curve" id="Curve_70idy"]
min_value = -1.0
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1e-05, -1), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="Animation" id="Animation_t5i4i"]
resource_name = "GameOver"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Winner:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(2.08165e-12, 2.08165e-12), Vector2(1.2, 1.2), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayAgainButton:scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.8, 1.3, 1.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(2.08165e-12, 2.08165e-12), Vector2(1.2, 1.2), Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("QuitButton:scale")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1.1, 1.6, 1.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(2.08165e-12, 2.08165e-12), Vector2(1.2, 1.2), Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("NextLevelButton:scale")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.5, 1, 1.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(2.08165e-12, 2.08165e-12), Vector2(1.2, 1.2), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_o1w4x"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Winner:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2.08165e-12, 2.08165e-12)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayAgainButton:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2.08165e-12, 2.08165e-12)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("QuitButton:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2.08165e-12, 2.08165e-12)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("NextLevelButton:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2.08165e-12, 2.08165e-12)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_grwsq"]
_data = {
"GameOver": SubResource("Animation_t5i4i"),
"RESET": SubResource("Animation_o1w4x")
}

[node name="GameOverScreen" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 1080.0
script = ExtResource("1_ktyi7")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(1, 1, 1, 0.501961)

[node name="Boom1" type="CPUParticles2D" parent="."]
position = Vector2(960, 285)
emitting = false
amount = 20
lifetime = 3.0
one_shot = true
explosiveness = 1.0
texture = ExtResource("2_niorh")
spread = 180.0
gravity = Vector2(2.08165e-12, 2.08165e-12)
initial_velocity_min = 50.0
initial_velocity_max = 150.0
angular_velocity_min = -500.0
angular_velocity_max = 500.0
scale_amount_min = 0.1
scale_amount_max = 0.3
scale_amount_curve = SubResource("Curve_qivs3")
color = Color(0.9, 0, 0, 1)
hue_variation_min = -1.0
hue_variation_max = 1.0
hue_variation_curve = SubResource("Curve_70idy")

[node name="Boom2" type="CPUParticles2D" parent="."]
position = Vector2(960, 285)
emitting = false
amount = 20
lifetime = 3.0
one_shot = true
explosiveness = 1.0
texture = ExtResource("3_uhjxs")
spread = 180.0
gravity = Vector2(2.08165e-12, 2.08165e-12)
initial_velocity_min = 50.0
initial_velocity_max = 150.0
angular_velocity_min = -500.0
angular_velocity_max = 500.0
scale_amount_min = 0.1
scale_amount_max = 0.3
scale_amount_curve = SubResource("Curve_qivs3")
color = Color(0.9, 0, 0, 1)
hue_variation_min = -1.0
hue_variation_max = 1.0
hue_variation_curve = SubResource("Curve_70idy")

[node name="Boom3" type="CPUParticles2D" parent="."]
position = Vector2(960, 285)
emitting = false
amount = 20
lifetime = 3.0
one_shot = true
explosiveness = 1.0
texture = ExtResource("4_s7i67")
spread = 180.0
gravity = Vector2(2.08165e-12, 2.08165e-12)
initial_velocity_min = 50.0
initial_velocity_max = 150.0
angular_velocity_min = -500.0
angular_velocity_max = 500.0
scale_amount_min = 0.3
scale_amount_max = 0.6
scale_amount_curve = SubResource("Curve_qivs3")
color = Color(0.9, 0, 0, 1)
hue_variation_min = -1.0
hue_variation_max = 1.0
hue_variation_curve = SubResource("Curve_70idy")

[node name="Winner" type="Label" parent="."]
layout_mode = 0
offset_top = 200.0
offset_right = 1920.0
offset_bottom = 350.0
scale = Vector2(2.08165e-12, 2.08165e-12)
pivot_offset = Vector2(960, 75)
theme_override_font_sizes/font_size = 100
text = "Player wins!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_grwsq")
}

[node name="NextLevelButton" type="Button" parent="."]
layout_mode = 0
offset_left = 835.0
offset_top = 660.0
offset_right = 1085.0
offset_bottom = 724.0
scale = Vector2(2.08165e-12, 2.08165e-12)
pivot_offset = Vector2(125, 32)
focus_neighbor_bottom = NodePath("../PlayAgainButton")
theme_override_font_sizes/font_size = 36
text = "Next Level"

[node name="PlayAgainButton" type="Button" parent="."]
layout_mode = 0
offset_left = 850.0
offset_top = 738.0
offset_right = 1070.0
offset_bottom = 794.0
scale = Vector2(2.08165e-12, 2.08165e-12)
pivot_offset = Vector2(125, 32)
focus_neighbor_top = NodePath("../NextLevelButton")
focus_neighbor_bottom = NodePath("../QuitButton")
theme_override_font_sizes/font_size = 30
text = "Play Again"

[node name="QuitButton" type="Button" parent="."]
layout_mode = 0
offset_left = 850.0
offset_top = 804.0
offset_right = 1070.0
offset_bottom = 860.0
scale = Vector2(2.08165e-12, 2.08165e-12)
pivot_offset = Vector2(110, 28)
focus_neighbor_top = NodePath("../PlayAgainButton")
theme_override_font_sizes/font_size = 30
text = "Quit Game"
